; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_gaistrerror.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_wsocket.c_socket_gaistrerror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [37 x i8] c"temporary failure in name resolution\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"invalid value for ai_flags\00", align 1
@.str.2 = private unnamed_addr constant [24 x i8] c"invalid value for hints\00", align 1
@.str.3 = private unnamed_addr constant [43 x i8] c"non-recoverable failure in name resolution\00", align 1
@.str.4 = private unnamed_addr constant [24 x i8] c"ai_family not supported\00", align 1
@.str.5 = private unnamed_addr constant [26 x i8] c"memory allocation failure\00", align 1
@.str.6 = private unnamed_addr constant [43 x i8] c"host or service not provided, or not known\00", align 1
@.str.7 = private unnamed_addr constant [25 x i8] c"argument buffer overflow\00", align 1
@.str.8 = private unnamed_addr constant [29 x i8] c"resolved protocol is unknown\00", align 1
@.str.9 = private unnamed_addr constant [38 x i8] c"service not supported for socket type\00", align 1
@.str.10 = private unnamed_addr constant [26 x i8] c"ai_socktype not supported\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @socket_gaistrerror(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

7:                                                ; preds = %1
  %8 = load i32, i32* %3, align 4
  switch i32 %8, label %23 [
    i32 139, label %9
    i32 138, label %10
    i32 137, label %11
    i32 136, label %12
    i32 135, label %13
    i32 134, label %14
    i32 133, label %15
    i32 132, label %16
    i32 131, label %17
    i32 130, label %18
    i32 129, label %19
    i32 128, label %20
  ]

9:                                                ; preds = %7
  store i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %26

10:                                               ; preds = %7
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %26

11:                                               ; preds = %7
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %26

12:                                               ; preds = %7
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %26

13:                                               ; preds = %7
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %26

14:                                               ; preds = %7
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %26

15:                                               ; preds = %7
  store i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %26

16:                                               ; preds = %7
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %26

17:                                               ; preds = %7
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %26

18:                                               ; preds = %7
  store i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %26

19:                                               ; preds = %7
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %26

20:                                               ; preds = %7
  %21 = load i32, i32* @errno, align 4
  %22 = call i8* @strerror(i32 %21)
  store i8* %22, i8** %2, align 8
  br label %26

23:                                               ; preds = %7
  %24 = load i32, i32* %3, align 4
  %25 = call i8* @gai_strerror(i32 %24)
  store i8* %25, i8** %2, align 8
  br label %26

26:                                               ; preds = %23, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %6
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}

declare dso_local i8* @strerror(i32) #1

declare dso_local i8* @gai_strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
